fix extra width styling on smaller screens

--- a/scss/Pages/Index.scss
+++ b/scss/Pages/Index.scss
@@ -15,7 +15,6 @@
 
 		.personal-details {
 			text-align: center;
-			width: 30rem;
 			span {
 				display: block;
 				margin-top: 0.15rem;
